2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* GeoLOD.wrl:
	* GeoCoordinate.wrl:
	* GeoTouchSensor.wrl:
	* GeoElevationGrid.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Globals.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl:
	* InlineTimer.wrl: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl:
	* Script-vrmlscript1.wrl: 

2014-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* SceneProto.wrl:
	* SceneExternProto.wrl:
	* Proto.rootNodes.wrl:
	* X3DScene.rootNodes.wrl: 

2014-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-15  Holger Seelig  <holger.seelig@yahoo.de>

	* QuadSphere.wrl:
	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* EXPORT.wrl:
	* Routes.wrl:
	* Route.wrl:
	* IMPORT-Inline.wrl:
	* InlineTimer.wrl: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* RuntimeNameScopeIMPORT.wrl:
	* RuntimeNameScopeEXPORT.wrl: 

2014-03-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* VRML2.0.wrl:
	* Comments.wrl: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* IMPORT.wrl:
	* Comments.wrl: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* forklift3.wrl: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* index.wrl:
	* hangar.wrl: 

2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* home.wrl:
	* info.svg:
	* logo.wrl:
	* info.png:
	* Rotor.wrl:
	* Colors.wrl:
	* background.wrl:
	* red.orange.yellow.wrl: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* uft8.wrl: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: