@@ -1,4 +1,4 @@
-#VRML V2.0 utf8
+#VRML V2.0 utf8 Titania
 
 # Scene Comment 
 # Scene Comment2 
