@@ -1,5 +1,10 @@
 2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SFString.cpp:
+	* GoldenGate.cpp: 
+
+2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* GoldenGate.cpp:
 	* X3DTransformNode.cpp: 
 
